[FIX] refactor courses routes
